--- a/notebooks/level_1_challenge/challenge_1_benchmark.ipynb
+++ b/notebooks/level_1_challenge/challenge_1_benchmark.ipynb
@@ -33,8 +33,8 @@
     "\n",
     "\n",
     "Most of the functions present in this notebook were adapted from the following notebooks:\n",
-    "- [Training Dataset Summary](supplementary_notebooks/dataset_summary.ipynb)\n",
-    "- [TerraClimate/Weather](supplementary_notebooks/TerraClimate.ipynb)\n",
+    "- [Training Dataset Summary](../supplementary_notebooks/dataset_summary.ipynb)\n",
+    "- [TerraClimate/Weather](../supplementary_notebooks/TerraClimate.ipynb)\n",
     "\n",
     "Again, it must be noted that this notebook is just a starting point. We make plenty of assumptions in this notebook that you may not think are best for solving the challenge effectively. You are encouraged to modify these functions, to rewrite them completely, or to try a different approach entirely.\n",
     "\n",
@@ -2159,7 +2159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
